# memos-mcp

./: .env.example  .npmignore  Dockerfile  README.md  hello.py  index.js  llms-full.txt  memos_mcp_server.py  package.json  pyproject.toml  requirements.txt  smithery.yaml
scripts/: install.js
skills/memos-mcp/: SKILL.md
skills/memos-mcp/scripts/: memos.py
src/memos_cmp/: __init__.py  server.py
